<resources>
    <string name="app_name">Tengesani</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_stock">Stock</string>
    <string name="title_sales">Sales</string>
    <string name="title_purchases">Purchases</string>
    <string name="title_expenses">Expenses</string>
    <string name="title_statements">Fin Statements</string>
    <string name="title_activity_add_purchase">Purchase Details</string>
    <string name="product_configuration">Product Configuration</string>
    <string name="product_category_configuration">Product Category Configuration</string>
    <string name="save">Save</string>
    <string name="aa">Purchase Order</string>


</resources>