<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_purchases"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_purchases" />

    <item
        android:id="@+id/navigation_sales"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_sales" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_dashboard" />


    <item
        android:id="@+id/navigation_expenses"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_expenses" />


    <item
        android:id="@+id/navigation_fin_statements"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_statements" />

</menu>